# MouseFlow

./: README.md  enivronment_setup_linux.yaml  enivronment_setup_winodws.yaml  pyproject.toml
src/mouseflow/: __init__.py  apply_models.py  body_processing.py  dlc.py  face_processing.py  mouseflow.py  optical_flow.py
src/mouseflow/utils/: __init__.py  frequencies.py  generate_labeled_videos.py  generic.py  motion_processing.py  preprocess_video.py  pytorch_utils.py  video_preview.py
