[project]
name = "MouseFlow"
version = "0.0.1"
authors = [
  { name="Oliver Barnstedt", email="o.barnstedt@eni-g.de" },
  { name="Lam Bui", email="l.bui@eni-g.de" },
]
description = "A Python toolbox to quantify facial and bodily movement in headfixed mice."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  'matplotlib',
  'pandas',
  'numpy',
  'h5py',
  'tqdm',
  'scipy',
]

[project.urls]
"Homepage" = "https://github.com/BarnstedtLab/MouseFlow"
"Bug Tracker" = "https://github.com/BarnstedtLab/MouseFlow/issues"